solución link página project

--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
                 </div><!-- card -->
             </div>
             <div class="container__all">
-                <a href="project">Todos los Proyectos</a>
+                <a href="project.html">Todos los Proyectos</a>
                 <a href="project.html">
                     <svg xmlns="http://www.w3.org/2000/svg" height="1em"
                         viewBox="0 0 512 512"><!--! Font Awesome Free 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. -->
