--- a/project.html
+++ b/project.html
@@ -12,7 +12,7 @@
 <body>
     <header class="header">
         <div class="contenedor header__contenedor">
-            <a href="index.html" class="logo">Jhordev</a>
+            <a href="/" class="logo">Jhordev</a>
             <nav class="nav" data-nav>
                 <ul class="list__nav">
                     <!-- <li class="items"><a href="project.html" class="link">Proyectos</a></li> -->
