--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                         </svg>
                         <div class="info__title">
                             <h3>Challenge Alura | Encriptador</h3>
-                            <p>Pequeña aplicación que encripta y textos | html-css-js</p>
+                            <p>Pequeña aplicación que encripta textos | html-css-js</p>
                         </div>
                     </div>
                 </div><!-- card -->
