--- a/index.html
+++ b/index.html
@@ -61,18 +61,7 @@
                                     d="M165.9 397.4c0 2-2.3 3.6-5.2 3.6-3.3.3-5.6-1.3-5.6-3.6 0-2 2.3-3.6 5.2-3.6 3-.3 5.6 1.3 5.6 3.6zm-31.1-4.5c-.7 2 1.3 4.3 4.3 4.9 2.6 1 5.6 0 6.2-2s-1.3-4.3-4.3-5.2c-2.6-.7-5.5.3-6.2 2.3zm44.2-1.7c-2.9.7-4.9 2.6-4.6 4.9.3 2 2.9 3.3 5.9 2.6 2.9-.7 4.9-2.6 4.6-4.6-.3-1.9-3-3.2-5.9-2.9zM244.8 8C106.1 8 0 113.3 0 252c0 110.9 69.8 205.8 169.5 239.2 12.8 2.3 17.3-5.6 17.3-12.1 0-6.2-.3-40.4-.3-61.4 0 0-70 15-84.7-29.8 0 0-11.4-29.1-27.8-36.6 0 0-22.9-15.7 1.6-15.4 0 0 24.9 2 38.6 25.8 21.9 38.6 58.6 27.5 72.9 20.9 2.3-16 8.8-27.1 16-33.7-55.9-6.2-112.3-14.3-112.3-110.5 0-27.5 7.6-41.3 23.6-58.9-2.6-6.5-11.1-33.3 2.6-67.9 20.9-6.5 69 27 69 27 20-5.6 41.5-8.5 62.8-8.5s42.8 2.9 62.8 8.5c0 0 48.1-33.6 69-27 13.7 34.7 5.2 61.4 2.6 67.9 16 17.7 25.8 31.5 25.8 58.9 0 96.5-58.9 104.2-114.8 110.5 9.2 7.9 17 22.9 17 46.4 0 33.7-.3 75.4-.3 83.6 0 6.5 4.6 14.4 17.3 12.1C428.2 457.8 496 362.9 496 252 496 113.3 383.5 8 244.8 8zM97.2 352.9c-1.3 1-1 3.3.7 5.2 1.6 1.6 3.9 2.3 5.2 1 1.3-1 1-3.3-.7-5.2-1.6-1.6-3.9-2.3-5.2-1zm-10.8-8.1c-.7 1.3.3 2.9 2.3 3.9 1.6 1 3.6.7 4.3-.7.7-1.3-.3-2.9-2.3-3.9-2-.6-3.6-.3-4.3.7zm32.4 35.6c-1.6 1.3-1 4.3 1.3 6.2 2.3 2.3 5.2 2.6 6.5 1 1.3-1.3.7-4.3-1.3-6.2-2.2-2.3-5.2-2.6-6.5-1zm-11.4-14.7c-1.6 1-1.6 3.6 0 5.9 1.6 2.3 4.3 3.3 5.6 2.3 1.6-1.3 1.6-3.9 0-6.2-1.4-2.3-4-3.3-5.6-2z" />
                             </svg>
                         </a>
-                        <a class="social__icon" href="https://www.linkedin.com/in/jhordy-mondragon/" target="_blank">
-                            <svg xmlns="http://www.w3.org/2000/svg" height="1em"
-                                viewBox="0 0 448 512"><!--! Font Awesome Free 6.4.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. -->
-                                <style>
-                                    svg {
-                                        fill: #ffffff
-                                    }
-                                </style>
-                                <path
-                                    d="M100.28 448H7.4V148.9h92.88zM53.79 108.1C24.09 108.1 0 83.5 0 53.8a53.79 53.79 0 0 1 107.58 0c0 29.7-24.1 54.3-53.79 54.3zM447.9 448h-92.68V302.4c0-34.7-.7-79.2-48.29-79.2-48.29 0-55.69 37.7-55.69 76.7V448h-92.78V148.9h89.08v40.8h1.3c12.4-23.5 42.69-48.3 87.88-48.3 94 0 111.28 61.9 111.28 142.3V448z" />
-                            </svg>
-                        </a>
+                    
                         <a class="social__icon" href="mailto:jhordymondragon4@gmail.com" target="_blank">
                             <svg xmlns="http://www.w3.org/2000/svg" width="26" height="27" viewBox="0 0 26 27"
                                 fill="none">
@@ -97,6 +86,7 @@
         <section class="container__proyectos">
             <h3 class="title__section">Proyectos</h3>
             <div class="proyectos">
+
                 <div class="card__proyecto">
                     <div class="proyecto__img">
                         <div class="container__option">
@@ -134,6 +124,45 @@
                         </div>
                     </div>
                 </div><!-- card -->
+
+                <div class="card__proyecto">
+                    <div class="proyecto__img">
+                        <div class="container__option">
+                            <a href="https://github.com/priorycode/Landing-Abogados" target="_blank">
+                                <svg xmlns="http://www.w3.org/2000/svg" height="1em"
+                                    viewBox="0 0 448 512"><!--! Font Awesome Free 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. -->
+                                    <path
+                                        d="M400 32H48C21.5 32 0 53.5 0 80v352c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48V80c0-26.5-21.5-48-48-48zM277.3 415.7c-8.4 1.5-11.5-3.7-11.5-8 0-5.4.2-33 .2-55.3 0-15.6-5.2-25.5-11.3-30.7 37-4.1 76-9.2 76-73.1 0-18.2-6.5-27.3-17.1-39 1.7-4.3 7.4-22-1.7-45-13.9-4.3-45.7 17.9-45.7 17.9-13.2-3.7-27.5-5.6-41.6-5.6-14.1 0-28.4 1.9-41.6 5.6 0 0-31.8-22.2-45.7-17.9-9.1 22.9-3.5 40.6-1.7 45-10.6 11.7-15.6 20.8-15.6 39 0 63.6 37.3 69 74.3 73.1-4.8 4.3-9.1 11.7-10.6 22.3-9.5 4.3-33.8 11.7-48.3-13.9-9.1-15.8-25.5-17.1-25.5-17.1-16.2-.2-1.1 10.2-1.1 10.2 10.8 5 18.4 24.2 18.4 24.2 9.7 29.7 56.1 19.7 56.1 19.7 0 13.9.2 36.5.2 40.6 0 4.3-3 9.5-11.5 8-66-22.1-112.2-84.9-112.2-158.3 0-91.8 70.2-161.5 162-161.5S388 165.6 388 257.4c.1 73.4-44.7 136.3-110.7 158.3zm-98.1-61.1c-1.9.4-3.7-.4-3.9-1.7-.2-1.5 1.1-2.8 3-3.2 1.9-.2 3.7.6 3.9 1.9.3 1.3-1 2.6-3 3zm-9.5-.9c0 1.3-1.5 2.4-3.5 2.4-2.2.2-3.7-.9-3.7-2.4 0-1.3 1.5-2.4 3.5-2.4 1.9-.2 3.7.9 3.7 2.4zm-13.7-1.1c-.4 1.3-2.4 1.9-4.1 1.3-1.9-.4-3.2-1.9-2.8-3.2.4-1.3 2.4-1.9 4.1-1.5 2 .6 3.3 2.1 2.8 3.4zm-12.3-5.4c-.9 1.1-2.8.9-4.3-.6-1.5-1.3-1.9-3.2-.9-4.1.9-1.1 2.8-.9 4.3.6 1.3 1.3 1.8 3.3.9 4.1zm-9.1-9.1c-.9.6-2.6 0-3.7-1.5s-1.1-3.2 0-3.9c1.1-.9 2.8-.2 3.7 1.3 1.1 1.5 1.1 3.3 0 4.1zm-6.5-9.7c-.9.9-2.4.4-3.5-.6-1.1-1.3-1.3-2.8-.4-3.5.9-.9 2.4-.4 3.5.6 1.1 1.3 1.3 2.8.4 3.5zm-6.7-7.4c-.4.9-1.7 1.1-2.8.4-1.3-.6-1.9-1.7-1.5-2.6.4-.6 1.5-.9 2.8-.4 1.3.7 1.9 1.8 1.5 2.6z" />
+                                </svg>
+                            </a>
+                            <a href="https://estudiogarcia.vercel.app/" target="_blank">
+                                <svg xmlns="http://www.w3.org/2000/svg" height="1em"
+                                    viewBox="0 0 512 512"><!--! Font Awesome Free 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. -->
+                                    <style>
+                                        svg {
+                                            fill: #ffffff
+                                        }
+                                    </style>
+                                    <path
+                                        d="M352 0c-12.9 0-24.6 7.8-29.6 19.8s-2.2 25.7 6.9 34.9L370.7 96 201.4 265.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0L416 141.3l41.4 41.4c9.2 9.2 22.9 11.9 34.9 6.9s19.8-16.6 19.8-29.6V32c0-17.7-14.3-32-32-32H352zM80 32C35.8 32 0 67.8 0 112V432c0 44.2 35.8 80 80 80H400c44.2 0 80-35.8 80-80V320c0-17.7-14.3-32-32-32s-32 14.3-32 32V432c0 8.8-7.2 16-16 16H80c-8.8 0-16-7.2-16-16V112c0-8.8 7.2-16 16-16H192c17.7 0 32-14.3 32-32s-14.3-32-32-32H80z" />
+                                </svg>
+                            </a>
+                        </div>
+                        <img src="build/img/landing.webp" alt="Imagen del proyecto">
+                    </div>
+                    <div class="info__card">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" viewBox="0 0 50 50" fill="none">
+                            <path
+                                d="M34.0834 29.1667C34.2501 27.7917 34.3751 26.4167 34.3751 25C34.3751 23.5833 34.2501 22.2083 34.0834 20.8333H41.1251C41.4584 22.1667 41.6667 23.5625 41.6667 25C41.6667 26.4375 41.4584 27.8333 41.1251 29.1667M30.3959 40.75C31.6459 38.4375 32.6042 35.9375 33.2709 33.3333H39.4167C37.3983 36.8089 34.1962 39.4416 30.3959 40.75ZM29.8751 29.1667H20.1251C19.9167 27.7917 19.7917 26.4167 19.7917 25C19.7917 23.5833 19.9167 22.1875 20.1251 20.8333H29.8751C30.0626 22.1875 30.2084 23.5833 30.2084 25C30.2084 26.4167 30.0626 27.7917 29.8751 29.1667ZM25.0001 41.5833C23.2709 39.0833 21.8751 36.3125 21.0209 33.3333H28.9792C28.1251 36.3125 26.7292 39.0833 25.0001 41.5833ZM16.6667 16.6667H10.5834C12.581 13.1817 15.7809 10.5448 19.5834 9.24999C18.3334 11.5625 17.3959 14.0625 16.6667 16.6667ZM10.5834 33.3333H16.6667C17.3959 35.9375 18.3334 38.4375 19.5834 40.75C15.7889 39.441 12.5935 36.8077 10.5834 33.3333ZM8.87508 29.1667C8.54175 27.8333 8.33341 26.4375 8.33341 25C8.33341 23.5625 8.54175 22.1667 8.87508 20.8333H15.9167C15.7501 22.2083 15.6251 23.5833 15.6251 25C15.6251 26.4167 15.7501 27.7917 15.9167 29.1667M25.0001 8.39582C26.7292 10.8958 28.1251 13.6875 28.9792 16.6667H21.0209C21.8751 13.6875 23.2709 10.8958 25.0001 8.39582ZM39.4167 16.6667H33.2709C32.6189 14.0864 31.6534 11.5956 30.3959 9.24999C34.2292 10.5625 37.4167 13.2083 39.4167 16.6667ZM25.0001 4.16666C13.4792 4.16666 4.16675 13.5417 4.16675 25C4.16675 30.5253 6.36168 35.8244 10.2687 39.7314C12.2032 41.6659 14.4999 43.2005 17.0275 44.2475C19.5551 45.2945 22.2642 45.8333 25.0001 45.8333C30.5254 45.8333 35.8245 43.6384 39.7315 39.7314C43.6385 35.8244 45.8334 30.5253 45.8334 25C45.8334 22.2641 45.2945 19.555 44.2476 17.0274C43.2006 14.4998 41.666 12.2032 39.7315 10.2686C37.7969 8.33404 35.5003 6.79947 32.9727 5.7525C30.445 4.70553 27.736 4.16666 25.0001 4.16666Z"
+                                fill="#111A20" />
+                        </svg>
+                        <div class="info__title">
+                            <h3>Landing Page Estudio Abogados</h3>
+                            <p>Diseñada para presentar los servicios un estudio legal html-css-js</p>
+                        </div>
+                    </div>
+                </div><!-- card -->
+
             </div>
             <div class="container__all">
                 <a href="project.html">Todos los Proyectos</a>
