Actualización de nuevo proyecto - Blog Cafe

--- a/index.html
+++ b/index.html
@@ -121,11 +121,11 @@
                         </svg>
                         <div class="info__title">
                             <h3>Challenge Alura | Encriptador</h3>
-                            <p>Pequeña aplicación que encripta textos | html-css-js</p>
+                            <p>Pequeña aplicación que encripta y desencripta textos <br> html-css-js</p>
                         </div>
                     </div>
                 </div><!-- card -->
-
+                
                 <div class="card__proyecto">
                     <div class="proyecto__img">
                         <div class="container__option">
@@ -196,12 +196,12 @@
                                 fill="#111A20" />
                         </svg>
                         <div class="info__title">
-                            <h3>Landing Page Moto Cuy</h3>
-                            <p>Diseñada para presentar la aplicación de Moto Cuy - Lima html-css-js</p>
+                            <h3>Landing Page para Moto Cuy</h3>
+                            <p>Diseñada para presentar la aplicación de Moto Cuy - Lima html-css-js-php: Laravel</p>
                         </div>
                     </div>
                 </div><!-- card -->
-
+                
                 <div class="card__proyecto">
                     <div class="proyecto__img">
                         <!-- <div class="container__option">
@@ -235,7 +235,7 @@
                         </svg>
                         <div class="info__title">
                             <h3>Diseño de Dashboard Moto Cuy</h3>
-                            <p>Diseñada para administrar la aplicación Moto Cuy - Lima html-css-js</p>
+                            <p>Diseñada para administrar la aplicación Moto Cuy - Lima html-css-js-php: Laravel</p>
                         </div>
                     </div>
                 </div><!-- card -->
