--- a/project.html
+++ b/project.html
@@ -7,6 +7,8 @@
     <title>Jhordev | Proyectos</title>
     <link rel="shortcut icon" href="build/img/logo.svg" type="image/x-icon">
     <link rel="stylesheet" href="build/css/app.css">
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1751856308888746"
+        crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -20,7 +22,7 @@
                 </ul>
             </nav>
         </div>
-    </header>   
+    </header>
 
 
     <main class="contenedor">
@@ -69,7 +71,7 @@
                         </div>
                     </div>
                 </div><!-- card -->
-                
+
                 <div class="card__proyecto">
                     <div class="proyecto__img">
                         <div class="container__option">
@@ -183,7 +185,7 @@
                         </div>
                     </div>
                 </div><!-- card -->
-                
+
                 <div class="card__proyecto">
                     <div class="proyecto__img">
                         <!-- <div class="container__option">
