script pegado para publicidad

--- a/project.html
+++ b/project.html
@@ -7,6 +7,8 @@
     <title>Jhordev | Proyectos</title>
     <link rel="shortcut icon" href="build/img/logo.svg" type="image/x-icon">
     <link rel="stylesheet" href="build/css/app.css">
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1751856308888746"
+     crossorigin="anonymous"></script>
 </head>
 
 <body>
