--- a/index.html
+++ b/index.html
@@ -7,9 +7,17 @@
     <title>Jhordev</title>
     <link rel="shortcut icon" href="build/img/logo.svg" type="image/x-icon">
     <link rel="stylesheet" href="build/css/app.css">
+
+    <meta name="description"
+        content="Descubre el portafolio de Jhordev, un destacado desarrollador y diseñador frontend. Explora proyectos creativos, soluciones innovadoras en diseño web y desarrollo personalizado para satisfacer todas tus necesidades de presencia en línea.">
+    <meta name="keywords"
+        content="Desarrollo web, diseño frontend, portafolio de Jhordev, diseñador web, desarrollador frontend, soluciones de diseño web, proyectos de desarrollo web, programación creativa, diseño innovador, calculadora ucss">
+    <meta name="author" content="Jhordev">
+    <link rel="canonical" href="https://www.jhordev.com">
+
     <script src="https://kit.fontawesome.com/7d13303a92.js" crossorigin="anonymous"></script>
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1751856308888746"
-     crossorigin="anonymous"></script>
+        crossorigin="anonymous"></script>
 </head>
 
 <body data-body>
