--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta name="description"
         content="Descubre el portafolio de Jhordev, un destacado desarrollador y diseñador frontend. Explora proyectos creativos, soluciones innovadoras en diseño web y desarrollo personalizado para satisfacer todas tus necesidades de presencia en línea.">
     <meta name="keywords"
-        content="Desarrollo web, diseño frontend, portafolio de Jhordev, diseñador web, desarrollador frontend, soluciones de diseño web, proyectos de desarrollo web, programación creativa, diseño innovador, calculadora ucss">
+        content="Desarrollo web, diseño frontend, portafolio de Jhordev, diseñador web, desarrollador frontend, soluciones de diseño web, proyectos de desarrollo web, programación creativa, diseño innovador, calculadora ucss, desarrollo web en Moyobamba, desarrollo web en Nueva Cajamrca, Desarrollo web en San Martin, Desarrollo web en Rioja">
     <meta name="author" content="Jhordev">
     <link rel="canonical" href="https://www.jhordev.com">
 
