--- a/index.html
+++ b/index.html
@@ -34,6 +34,9 @@
                 <li class="item"><a
                         href="mailto:jhordymondragon4@gmail.com?subject=Inter%C3%A9s%20en%20Proyecto%20Colaborativo&body=Hola%20Jhordy%2C%20me%20gustar%C3%ADa%20trabajar%20contigo%20en%20un%20proyecto."
                         class="link" target="_blank">Contacto</a></li>
+                <li class="item"><a
+                        href="https://drive.google.com/file/d/1iK_eEgBEYtJ9acQBjfWSjwjADsRxZOzh/view?usp=sharing"
+                        class="link" target="_blank">Resumen</a></li>
             </ul>
             <div class="container-option">
                 <!-- <button class="btn-mode">
