solución barra de navegación movile

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
             <p class="description" data-aos="fade-right" data-aos-duration="1000" data-aos-delay="100">
                 Con una sólida trayectoria de 1 año en la industria tecnológica, me he consolidado como un
                 especialista apasionado y dedicado en el campo del desarrollo de software. Mi enfoque principal radica
-                en la <strong>creación y el diseño de aplicaciones web y móviles</strong>, donde busco constantemente
+                en la <strong>creación y el diseño de aplicaciones y sitios web</strong>, donde busco constantemente
                 innovar y superar los límites de lo convencional.
                 <strong>Mi objetivo</strong> es crear soluciones digitales que no solo sean estéticamente agradables y
                 fáciles de usar, sino que también aporten un valor significativo tanto para los usuarios finales como
