--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
             <h1 class="title-nom tracking-in-expand">Jhordy Mondragon</h1>
             <p class="about tracking-in-expand">> Desarrollador Front-end</p>
             <p class="description" data-aos="fade-right" data-aos-duration="1000" data-aos-delay="100">
-                Con una sólida trayectoria de 1 año en la industria tecnológica, me he consolidado como un
+                Con una sólida trayectoria de más de 2 años en la industria tecnológica, me he consolidado como un
                 especialista apasionado y dedicado en el campo del desarrollo de software. Mi enfoque principal radica
                 en la <strong>creación y el diseño de aplicaciones y sitios web</strong>, donde busco constantemente
                 innovar y superar los límites de lo convencional.
